Fix: Quick ball on mobile

--- a/src/components/QuickBall/QuickBall.scss
+++ b/src/components/QuickBall/QuickBall.scss
@@ -67,4 +67,10 @@
       }
     }
   }
+  @media (max-width: 450px) {
+    position: static;
+    .quick-ball-container {
+      width: 100%;
+    }
+  }
 }
